iscale-dev/clients/pchc/cics/cics_template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: CICS Resources

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: Resource Configuration
        Parameters:
          - Name
          - OrgName
          - EnvName
      - Label:
          default: Stack Configuration
        Parameters:
          - NetworkStackName
          - SNSStackName
          - DeletionProtection
      - Label:
          default: Load Balancer Configuration
        Parameters:
          - ClientDomainName
          - LoadBalancerCertificateArn
          - LoadBalancerHostName
      - Label:
          default: Instance Configuration
        Parameters:
          - InstanceKeyName
          - InstanceAMI
          - SIOSInstanceAMI
          - InstanceType
          - RDPPort
      - Label:
          default: Scheduler Configuration
        Parameters:
          - StartScheduleExpression
          - StopScheduleExpression

    ParameterLabels:
      Name:
        default: Resource Name
      OrgName:
        default: Organization Name
      EnvName:
        default: Environment Name
      DeletionProtection:
        default: Protect core items against deletion
      InstanceAMI:
        default: Instance AMI ID
      SIOSInstanceAMI:
        default: SIOS Instance AMI ID
      InstanceKeyName:
        default: Instance Key Name
      InstanceType:
        default: Instance Type
      LoadBalancerCertificateArn:
        default: Load Balancer SSL Certificate ARN
      LoadBalancerHostName:
        default: Load Balancer Host Name
      NetworkStackName:
        default: Network Stack Name
      RDPPort:
        default: RDP Port Number
      SIOSInstanceAMI:
        default: SIOS Instance AMI
      SNSStackName:
        default: SNS Topic Stack Name
      ClientDomainName:
        default: Domain Name
      StartScheduleExpression:
        default: Start Schedule CRON Expression
      StopScheduleExpression:
        default: Stop Schedule CRON Expression

Parameters:
  Name:
    Description: Unique name/identifier (Can be client name or resource name)
    Type: String
    MinLength: 3
    MaxLength: 9
    Default: cics
  OrgName:
    Description: The name of the organization
    Type: String
    Default: pchc
    AllowedPattern: '^[a-z]+(-[a-z]+)*$'
    ConstraintDescription: Organization must only contain lowercase letters, numbers and hyphen
    MaxLength: 10
  EnvName:
    Description: The name of the environment
    Type: String
    Default: Production
    AllowedValues:
      - Production
      - Staging
      - Development
      - Test
  ClientDomainName:
    Description: The client's domain name (e.g. example.com, iscale-software.com)
    Type: String
    AllowedPattern: ^[a-z0-9]+([\-\.]{1}[a-z0-9]+)*\.[a-z]{2,7}$
    Default: pchcdev.com
    MinLength: 1
  DeletionProtection:
    Description: Set to true to enable (valid only in Production mode)
    Type: String
    Default: false
    AllowedValues:
      - true
      - false
  InstanceAMI:
    Description: Instance AMI ID
    Type: AWS::EC2::Image::Id
    Default: ami-0d694fc7ea154072a #Default Windows 2019 base server
  InstanceKeyName:
    Description: Instance Key Name
    Type: String
    Default: ''
  InstanceType:
    Description: Type of instance for app server
    Type: String
    Default: t3.medium
    AllowedValues:
      - t3.medium
      - t3.large
      - t3.xlarge
  LoadBalancerHostName:
    Description: (Optional) Custom Hostname for load balancer URL
    Type: String
    Default: ''
    MaxLength: 12
  LoadBalancerCertificateArn:
    Description: SSL Certificate for the ELB
    Type: String
    Default: arn:aws:acm:ap-southeast-1:470455329885:certificate/9f713d5d-cb7c-4e8e-acc2-46862d610ec8
  NetworkStackName:
    Description: The name of the network stack
    Type: String
    Default: pchc-dev-ase1-network
    MinLength: 1
  RDPPort:
    Description: RDP port number
    Type: Number
    Default: 3389
    MinValue: 1
    MaxValue: 65535
  SIOSInstanceAMI:
    Description: Instance AMI ID
    Type: AWS::EC2::Image::Id
    Default: ami-06b2f14c1d8417d36 #Default SIOS Windows 2019 Marketplace Image
  SNSStackName:
    Description: The name of the SNS stack
    Type: String
    Default: pchc-dev-ase1-sns
    MinLength: 1
  StartScheduleExpression:
    Description: Schedule expression when to start the objects
    Type: String
    Default: cron(0 0 ? * MON-FRI *)
  StopScheduleExpression:
    Description: Schedule expression when to stop the objects
    Type: String
    Default: cron(0 10 ? * MON-FRI *)

Mappings:
  Fn::Transform:
    Name: AWS::Include
    Parameters:
      Location: s3://iscale-dev-cloudformation/include/mappings.yaml

Conditions:
  Fn::Transform:
    Name: AWS::Include
    Parameters:
      Location: s3://iscale-dev-cloudformation/include/conditions.yaml
  HasKeyName: !Not [!Equals [!Ref InstanceKeyName, '']]

Resources:

  ##
  # CICS Application Resources
  ##

  ELBStack:
    Type: AWS::CloudFormation::Stack
    Properties:
      TemplateURL: https://iscale-dev-cloudformation.s3-us-west-2.amazonaws.com/common/loadbalancer.yaml
      Parameters:
        Name: !Ref Name
        EnvName: !Ref EnvName
        OrgName: !Ref OrgName
        CertificateArn: !Ref LoadBalancerCertificateArn
        NetworkStackName: !Ref NetworkStackName
        SNSStackName: !Ref SNSStackName

###
# CICSAPPSVR1
###

  CICSAPPSVREC2Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: /
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM
      Policies:
        - PolicyName: S3BucketAccess
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - s3:Get*
                  - s3:Put*
                  - s3:List*
                Resource:
                  - !GetAtt ArchiveS3Bucket.Arn
                  - !GetAtt TransferS3Bucket.Arn

  CICSAPPSVRInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref CICSAPPSVREC2Role

  CICSAPPSVRSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Fn::ImportValue:
          !Sub '${NetworkStackName}-VpcId'
      GroupDescription: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, CICSAPPSVR, Security, Group]]
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 1
          ToPort: 65535
          CidrIp: 
            Fn::ImportValue:
              !Sub '${NetworkStackName}-VpcCidrBlock'
          Description: Allow TCP connections on all ports from inside VPC
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 
            Fn::ImportValue:
              !Sub '${NetworkStackName}-VpcCidrBlock'
          Description: Allow ICMP connections from inside VPC
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, CICSAPPSVR, Security, Group]]

  AllowJumpHostIntoCICSAPPSVR:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Allow connection from jump host
      IpProtocol: TCP
      GroupId: !Ref CICSAPPSVRSecurityGroup
      FromPort: 3389
      ToPort: 3389
      SourceSecurityGroupId:
        Fn::ImportValue:
          !Sub '${NetworkStackName}-JumpHostSecurityGroupId'

  CICSAPPSVR1Instance: 
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref SIOSInstanceAMI
      InstanceType: c5d.4xlarge
      DisableApiTermination: !Ref DeletionProtection
      IamInstanceProfile: !Ref CICSAPPSVRInstanceProfile
      KeyName: !If [HasKeyName, !Ref InstanceKeyName, !Ref 'AWS::NoValue']
      BlockDeviceMappings: 
        - DeviceName: /dev/sda1
          Ebs:
            DeleteOnTermination: true
            Encrypted: true
            VolumeSize: 100
            VolumeType: gp3
        - DeviceName: xvdf
          Ebs:
            DeleteOnTermination: true
            Encrypted: true
            Iops: 16000
            VolumeSize: 1000
            VolumeType: gp3
      SecurityGroupIds: 
        - !Ref CICSAPPSVRSecurityGroup
      SubnetId:        
        Fn::ImportValue:
          !Sub '${NetworkStackName}-PrivateSubnetId1'
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, CICSAPPSVR1]]

  HighCPUCICSAPPSVR1Alarm:
    Condition: IsProd
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmName: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, CICSAPPSVR1, high, cpu]]
      MetricName: CPUUtilization
      Namespace: AWS/EC2
      ComparisonOperator: GreaterThanOrEqualToThreshold
      EvaluationPeriods: 1
      Period: 60
      Statistic: Average
      Threshold: 80
      AlarmActions:
        - Fn::ImportValue:
            !Sub '${SNSStackName}-TopicArn'
      OKActions:
        - Fn::ImportValue:
            !Sub '${SNSStackName}-TopicArn'
      Dimensions:
        - Name: InstanceId
          Value: !Ref CICSAPPSVR1Instance

###
# CICSAPPSVR2
###

  CICSAPPSVR2Instance: 
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref SIOSInstanceAMI
      InstanceType: c5d.4xlarge
      DisableApiTermination: !Ref DeletionProtection
      IamInstanceProfile: !Ref CICSAPPSVRInstanceProfile
      KeyName: !If [HasKeyName, !Ref InstanceKeyName, !Ref 'AWS::NoValue']
      BlockDeviceMappings: 
        - DeviceName: /dev/sda1
          Ebs:
            DeleteOnTermination: true
            Encrypted: true
            VolumeSize: 100
            VolumeType: gp3
        - DeviceName: xvdf
          Ebs:
            DeleteOnTermination: true
            Encrypted: true
            Iops: 16000
            VolumeSize: 1000
            VolumeType: gp3
      SecurityGroupIds: 
        - !Ref CICSAPPSVRSecurityGroup
      SubnetId:        
        Fn::ImportValue:
          !Sub '${NetworkStackName}-PrivateSubnetId3'
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, CICSAPPSVR2]]

  HighCPUCICSAPPSVR2Alarm:
    Condition: IsProd
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmName: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, CICSAPPSVR2, high, cpu]]
      MetricName: CPUUtilization
      Namespace: AWS/EC2
      ComparisonOperator: GreaterThanOrEqualToThreshold
      EvaluationPeriods: 1
      Period: 60
      Statistic: Average
      Threshold: 80
      AlarmActions:
        - Fn::ImportValue:
            !Sub '${SNSStackName}-TopicArn'
      OKActions:
        - Fn::ImportValue:
            !Sub '${SNSStackName}-TopicArn'
      Dimensions:
        - Name: InstanceId
          Value: !Ref CICSAPPSVR2Instance

###
# GLBLSCPSVR1
###

  GLBLSCPSVREC2Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: /
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM

  GLBLSCPSVRInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref GLBLSCPSVREC2Role

  GLBLSCPSVRSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Fn::ImportValue:
          !Sub '${NetworkStackName}-VpcId'
      GroupDescription: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, GLBLSCPSVR1, Security, Group]]
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 1
          ToPort: 65535
          CidrIp: 
            Fn::ImportValue:
              !Sub '${NetworkStackName}-VpcCidrBlock'
          Description: Allow TCP connections on all ports from inside VPC
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 
            Fn::ImportValue:
              !Sub '${NetworkStackName}-VpcCidrBlock'
          Description: Allow ICMP connections from inside VPC
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, GLBLSCPSVR1, Security, Group]]

  AllowJumpHostIntoGLBLSCPSVR:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Allow connection from jump host
      IpProtocol: TCP
      GroupId: !Ref GLBLSCPSVRSecurityGroup
      FromPort: 3389
      ToPort: 3389
      SourceSecurityGroupId:
        Fn::ImportValue:
          !Sub '${NetworkStackName}-JumpHostSecurityGroupId'

  GLBLSCPSVR1Instance: 
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref InstanceAMI
      InstanceType: c5.2xlarge
      DisableApiTermination: !Ref DeletionProtection
      IamInstanceProfile: !Ref GLBLSCPSVRInstanceProfile
      KeyName: !If [HasKeyName, !Ref InstanceKeyName, !Ref 'AWS::NoValue']
      BlockDeviceMappings: 
        - DeviceName: /dev/sda1
          Ebs:
            DeleteOnTermination: true
            Encrypted: true
            VolumeSize: 30
            VolumeType: gp3
      SecurityGroupIds: 
        - !Ref GLBLSCPSVRSecurityGroup
      SubnetId:        
        Fn::ImportValue:
          !Sub '${NetworkStackName}-PrivateSubnetId1'
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, GLBLSCPSVR1]]

  HighCPUGLBLSCPSVR1Alarm:
    Condition: IsProd
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmName: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, GLBLSCPSVR1, high, cpu]]
      MetricName: CPUUtilization
      Namespace: AWS/EC2
      ComparisonOperator: GreaterThanOrEqualToThreshold
      EvaluationPeriods: 1
      Period: 60
      Statistic: Average
      Threshold: 80
      AlarmActions:
        - Fn::ImportValue:
            !Sub '${SNSStackName}-TopicArn'
      OKActions:
        - Fn::ImportValue:
            !Sub '${SNSStackName}-TopicArn'
      Dimensions:
        - Name: InstanceId
          Value: !Ref GLBLSCPSVR1Instance

###
# GLBLSCPSVR2
###

  GLBLSCPSVR2Instance: 
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref InstanceAMI
      InstanceType: c5.2xlarge
      DisableApiTermination: !Ref DeletionProtection
      IamInstanceProfile: !Ref GLBLSCPSVRInstanceProfile
      KeyName: !If [HasKeyName, !Ref InstanceKeyName, !Ref 'AWS::NoValue']
      BlockDeviceMappings: 
        - DeviceName: /dev/sda1
          Ebs:
            DeleteOnTermination: true
            Encrypted: true
            VolumeSize: 30
            VolumeType: gp3
      SecurityGroupIds: 
        - !Ref GLBLSCPSVRSecurityGroup
      SubnetId:        
        Fn::ImportValue:
          !Sub '${NetworkStackName}-PrivateSubnetId3'
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, GLBLSCPSVR2]]

  HighCPUGLBLSCPSVR2Alarm:
    Condition: IsProd
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmName: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, GLBLSCPSVR2, high, cpu]]
      MetricName: CPUUtilization
      Namespace: AWS/EC2
      ComparisonOperator: GreaterThanOrEqualToThreshold
      EvaluationPeriods: 1
      Period: 60
      Statistic: Average
      Threshold: 80
      AlarmActions:
        - Fn::ImportValue:
            !Sub '${SNSStackName}-TopicArn'
      OKActions:
        - Fn::ImportValue:
            !Sub '${SNSStackName}-TopicArn'
      Dimensions:
        - Name: InstanceId
          Value: !Ref GLBLSCPSVR2Instance

###
# IWEBAPPSVR1
###

  IWEBAPPSVREC2Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: /
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM

  IWEBAPPSVRInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref IWEBAPPSVREC2Role

  IWEBAPPSVRSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Fn::ImportValue:
          !Sub '${NetworkStackName}-VpcId'
      GroupDescription: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, IWEBAPPSVR, Security, Group]]
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 1
          ToPort: 65535
          CidrIp: 
            Fn::ImportValue:
              !Sub '${NetworkStackName}-VpcCidrBlock'
          Description: Allow TCP connections on all ports from inside VPC
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 
            Fn::ImportValue:
              !Sub '${NetworkStackName}-VpcCidrBlock'
          Description: Allow ICMP connections from inside VPC
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, IWEBAPPSVR, Security, Group]]

  AllowJumpHostIntoIWEBAPPSVR:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Allow connection from jump host
      IpProtocol: TCP
      GroupId: !Ref IWEBAPPSVRSecurityGroup
      FromPort: 3389
      ToPort: 3389
      SourceSecurityGroupId:
        Fn::ImportValue:
          !Sub '${NetworkStackName}-JumpHostSecurityGroupId'

  IWEBAPPSVR1Instance: 
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref InstanceAMI
      InstanceType: c5.2xlarge
      DisableApiTermination: !Ref DeletionProtection
      IamInstanceProfile: !Ref IWEBAPPSVRInstanceProfile
      KeyName: !If [HasKeyName, !Ref InstanceKeyName, !Ref 'AWS::NoValue']
      BlockDeviceMappings: 
        - DeviceName: /dev/sda1
          Ebs:
            DeleteOnTermination: true
            Encrypted: true
            VolumeSize: 30
            VolumeType: gp3
      SecurityGroupIds: 
        - !Ref IWEBAPPSVRSecurityGroup
      SubnetId:        
        Fn::ImportValue:
          !Sub '${NetworkStackName}-PrivateSubnetId1'
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, IWEBAPPSVR1]]

  HighCPUIWEBAPPSVR1Alarm:
    Condition: IsProd
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmName: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, IWEBAPPSVR1, high, cpu]]
      MetricName: CPUUtilization
      Namespace: AWS/EC2
      ComparisonOperator: GreaterThanOrEqualToThreshold
      EvaluationPeriods: 1
      Period: 60
      Statistic: Average
      Threshold: 80
      AlarmActions:
        - Fn::ImportValue:
            !Sub '${SNSStackName}-TopicArn'
      OKActions:
        - Fn::ImportValue:
            !Sub '${SNSStackName}-TopicArn'
      Dimensions:
        - Name: InstanceId
          Value: !Ref IWEBAPPSVR1Instance

###
# IWEBAPPSVR2
###

  IWEBAPPSVR2Instance: 
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref InstanceAMI
      InstanceType: c5.2xlarge
      DisableApiTermination: !Ref DeletionProtection
      IamInstanceProfile: !Ref IWEBAPPSVRInstanceProfile
      KeyName: !If [HasKeyName, !Ref InstanceKeyName, !Ref 'AWS::NoValue']
      BlockDeviceMappings: 
        - DeviceName: /dev/sda1
          Ebs:
            DeleteOnTermination: true
            Encrypted: true
            VolumeSize: 30
            VolumeType: gp3
      SecurityGroupIds: 
        - !Ref IWEBAPPSVRSecurityGroup
      SubnetId:        
        Fn::ImportValue:
          !Sub '${NetworkStackName}-PrivateSubnetId3'
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, IWEBAPPSVR2]]

  HighCPUIWEBAPPSVR2Alarm:
    Condition: IsProd
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmName: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, IWEBAPPSVR2, high, cpu]]
      MetricName: CPUUtilization
      Namespace: AWS/EC2
      ComparisonOperator: GreaterThanOrEqualToThreshold
      EvaluationPeriods: 1
      Period: 60
      Statistic: Average
      Threshold: 80
      AlarmActions:
        - Fn::ImportValue:
            !Sub '${SNSStackName}-TopicArn'
      OKActions:
        - Fn::ImportValue:
            !Sub '${SNSStackName}-TopicArn'
      Dimensions:
        - Name: InstanceId
          Value: !Ref IWEBAPPSVR2Instance

###
# CICSWITSVR
###

  CICSWITSVREC2Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: /
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM

  CICSWITSVRInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref CICSWITSVREC2Role

  CICSWITSVRSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Fn::ImportValue:
          !Sub '${NetworkStackName}-VpcId'
      GroupDescription: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, CICSWITSVR, Security, Group]]
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 1
          ToPort: 65535
          CidrIp: 
            Fn::ImportValue:
              !Sub '${NetworkStackName}-VpcCidrBlock'
          Description: Allow TCP connections on all ports from inside VPC
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 
            Fn::ImportValue:
              !Sub '${NetworkStackName}-VpcCidrBlock'
          Description: Allow ICMP connections from inside VPC
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, CICSWITSVR, Security, Group]]

  AllowJumpHostIntoCICSWITSVR:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Allow connection from jump host
      IpProtocol: TCP
      GroupId: !Ref CICSWITSVRSecurityGroup
      FromPort: 3389
      ToPort: 3389
      SourceSecurityGroupId:
        Fn::ImportValue:
          !Sub '${NetworkStackName}-JumpHostSecurityGroupId'

  CICSWITSVRInstance: 
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref InstanceAMI
      InstanceType: t3.micro
      DisableApiTermination: !Ref DeletionProtection
      IamInstanceProfile: !Ref CICSWITSVRInstanceProfile
      KeyName: !If [HasKeyName, !Ref InstanceKeyName, !Ref 'AWS::NoValue']
      BlockDeviceMappings: 
        - DeviceName: /dev/sda1
          Ebs:
            DeleteOnTermination: true
            Encrypted: true
            VolumeSize: 30
            VolumeType: gp3
      SecurityGroupIds: 
        - !Ref CICSWITSVRSecurityGroup
      SubnetId:        
        Fn::ImportValue:
          !Sub '${NetworkStackName}-PrivateSubnetId2'
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, CICSWITSVR]]

  HighCPUCICSWITSVRAlarm:
    Condition: IsProd
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmName: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, CICSWITSVR, high, cpu]]
      MetricName: CPUUtilization
      Namespace: AWS/EC2
      ComparisonOperator: GreaterThanOrEqualToThreshold
      EvaluationPeriods: 1
      Period: 60
      Statistic: Average
      Threshold: 80
      AlarmActions:
        - Fn::ImportValue:
            !Sub '${SNSStackName}-TopicArn'
      OKActions:
        - Fn::ImportValue:
            !Sub '${SNSStackName}-TopicArn'
      Dimensions:
        - Name: InstanceId
          Value: !Ref CICSWITSVRInstance

###
# PCHCADSVR
###

  PCHCADSVREC2Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: /
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM

  PCHCADSVRInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref PCHCADSVREC2Role

  PCHCADSVRSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Fn::ImportValue:
          !Sub '${NetworkStackName}-VpcId'
      GroupDescription: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, PCHCADSVR, Security, Group]]
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 1
          ToPort: 65535
          CidrIp: 
            Fn::ImportValue:
              !Sub '${NetworkStackName}-VpcCidrBlock'
          Description: Allow TCP connections on all ports from inside VPC
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 
            Fn::ImportValue:
              !Sub '${NetworkStackName}-VpcCidrBlock'
          Description: Allow ICMP connections from inside VPC
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, PCHCADSVR, Security, Group]]

  AllowJumpHostIntoPCHCADSVR:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Allow connection from jump host
      IpProtocol: TCP
      GroupId: !Ref PCHCADSVRSecurityGroup
      FromPort: 3389
      ToPort: 3389
      SourceSecurityGroupId:
        Fn::ImportValue:
          !Sub '${NetworkStackName}-JumpHostSecurityGroupId'

  PCHCADSVRENI1:
    Type: AWS::EC2::NetworkInterface
    Properties:
      Description: PCHCADSVR First Interface
      GroupSet:
        - !Ref PCHCADSVRSecurityGroup
      PrivateIpAddress: 10.0.2.26 #TODO - Need to fix this based on CIDR (e.g. for UAT)
      SourceDestCheck: true
      SubnetId:
        Fn::ImportValue:
          !Sub '${NetworkStackName}-PrivateSubnetId1'

  PCHCADSVRENI2:
    Type: AWS::EC2::NetworkInterface
    Properties:
      Description: PCHCADSVR Second Interface
      GroupSet:
        - !Ref PCHCADSVRSecurityGroup
      PrivateIpAddress: 10.0.2.29 #TODO - Need to fix this based on CIDR (e.g. for UAT)
      SourceDestCheck: true
      SubnetId:
        Fn::ImportValue:
          !Sub '${NetworkStackName}-PrivateSubnetId1'

  PCHCADSVRInstance:
    Type: AWS::EC2::Instance
    Properties:
      # ImageId: !Ref InstanceAMI
      # ImageId: ami-035d490a9d10b7a52 #Hardcoded since changes were made
      ImageId: ami-0a7006c3750c33741 #Hardcoded since changes were made
      InstanceType: t3.micro
      DisableApiTermination: !Ref DeletionProtection
      IamInstanceProfile: !Ref PCHCADSVRInstanceProfile
      KeyName: !If [HasKeyName, !Ref InstanceKeyName, !Ref 'AWS::NoValue']
      NetworkInterfaces:
        - DeviceIndex: 0
          NetworkInterfaceId: !Ref PCHCADSVRENI1
        - DeviceIndex: 1
          NetworkInterfaceId: !Ref PCHCADSVRENI2
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            DeleteOnTermination: true
            Encrypted: true
            VolumeSize: 30
            VolumeType: gp3
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, PCHCADSVR]]

  HighCPUADSVRAlarm:
    Condition: IsProd
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmName: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, ADSVR, high, cpu]]
      MetricName: CPUUtilization
      Namespace: AWS/EC2
      ComparisonOperator: GreaterThanOrEqualToThreshold
      EvaluationPeriods: 1
      Period: 60
      Statistic: Average
      Threshold: 80
      AlarmActions:
        - Fn::ImportValue:
            !Sub '${SNSStackName}-TopicArn'
      OKActions:
        - Fn::ImportValue:
            !Sub '${SNSStackName}-TopicArn'
      Dimensions:
        - Name: InstanceId
          Value: !Ref PCHCADSVRInstance

###
# PCHJUMPSVR
###

  PCHJUMPSVREC2Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: /
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM

  PCHJUMPSVRInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref PCHJUMPSVREC2Role

  AllowApertaTrafficIntoPCHJUMPSVR1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Aperta IP 1
      IpProtocol: TCP
      GroupId:
        Fn::ImportValue:
          !Sub '${NetworkStackName}-JumpHostSecurityGroupId'
      FromPort: !Ref RDPPort
      ToPort: !Ref RDPPort
      CidrIp: 89.243.169.162/32

  AllowApertaTrafficIntoPCHJUMPSVR2:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Aperta IP 2
      IpProtocol: TCP
      GroupId:
        Fn::ImportValue:
          !Sub '${NetworkStackName}-JumpHostSecurityGroupId'
      FromPort: !Ref RDPPort
      ToPort: !Ref RDPPort
      CidrIp: 82.27.129.12/32

  AllowPCHCOfficeTrafficIntoPCHJUMPSVR1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: PCHC Office 1
      IpProtocol: TCP
      GroupId:
        Fn::ImportValue:
          !Sub '${NetworkStackName}-JumpHostSecurityGroupId'
      FromPort: !Ref RDPPort
      ToPort: !Ref RDPPort
      CidrIp: 120.89.49.14/32

  AllowPCHCOfficeTrafficIntoPCHJUMPSVR2:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: PCHC Office 2
      IpProtocol: TCP
      GroupId:
        Fn::ImportValue:
          !Sub '${NetworkStackName}-JumpHostSecurityGroupId'
      FromPort: !Ref RDPPort
      ToPort: !Ref RDPPort
      CidrIp: 120.89.33.200/32

  AllowNoelTrafficIntoPCHJUMPSVR:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Noel IP address
      IpProtocol: TCP
      GroupId:
        Fn::ImportValue:
          !Sub '${NetworkStackName}-JumpHostSecurityGroupId'
      FromPort: !Ref RDPPort
      ToPort: !Ref RDPPort
      CidrIp: 120.89.33.198/32

  PCHJUMPSVRInstance: 
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref InstanceAMI
      InstanceType: t3.large
      DisableApiTermination: !Ref DeletionProtection
      IamInstanceProfile: !Ref PCHJUMPSVRInstanceProfile
      KeyName: !If [HasKeyName, !Ref InstanceKeyName, !Ref 'AWS::NoValue']
      BlockDeviceMappings: 
        - DeviceName: /dev/sda1
          Ebs:
            DeleteOnTermination: true
            Encrypted: true
            VolumeSize: 30
            VolumeType: gp3
      SecurityGroupIds:
        - Fn::ImportValue:
            !Sub '${NetworkStackName}-JumpHostSecurityGroupId'
      SubnetId:        
        Fn::ImportValue:
          !Sub '${NetworkStackName}-PublicSubnetId1'
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, PCHJUMPSVR]]

  HighCPUJUMPSVRAlarm:
    Condition: IsProd
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmName: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, JUMPSVR, high, cpu]]
      MetricName: CPUUtilization
      Namespace: AWS/EC2
      ComparisonOperator: GreaterThanOrEqualToThreshold
      EvaluationPeriods: 1
      Period: 60
      Statistic: Average
      Threshold: 80
      AlarmActions:
        - Fn::ImportValue:
            !Sub '${SNSStackName}-TopicArn'
      OKActions:
        - Fn::ImportValue:
            !Sub '${SNSStackName}-TopicArn'
      Dimensions:
        - Name: InstanceId
          Value: !Ref PCHJUMPSVRInstance

###
# Database
###

  DBStack:
    Type: AWS::CloudFormation::Stack
    Properties:
      TemplateURL: https://iscale-dev-cloudformation.s3-us-west-2.amazonaws.com/common/database.yaml
      Parameters:
        Name: !Ref Name
        DatabaseName: !Join ['',[!Ref Name, !FindInMap [EnvShort, !Ref EnvName, Name], db]]
        AllocatedStorage: 1000
        BackupRetentionPeriod: !If [IsProd, 30, 7]
        DeletionProtection: !If [IsProd, !Ref DeletionProtection, false]
        EnableCPUCreditAlarm: !If [IsProd, true, false]
        EnableEnhancedMonitoring: !If [IsProd, true, false]
        EnablePerformanceInsights: !If [IsProd, true, false]
        EnvName: !Ref EnvName
        Engine: sqlserver-se
        EngineVersion: 15.00.4073.23.v1
        Family: sqlserver-se-15.0
        InstanceType: db.m5.xlarge
        MasterUser: root
        NetworkStackName: !Ref NetworkStackName
        NetworkType: Private
        OrgName: !Ref OrgName
        SNSStackName: !Ref SNSStackName
        StorageEncrypted: true

  AllowCICSAPPSVRIntoDB:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Allow connection from CICSAPPSVR
      IpProtocol: TCP
      GroupId: !GetAtt [DBStack, Outputs.SecurityGroupId]
      FromPort: 1433
      ToPort: 1433
      SourceSecurityGroupId: !Ref CICSAPPSVRSecurityGroup

  AllowIWEBAPPSVRIntoDB:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Allow connection from IWEBAPPSVR
      IpProtocol: TCP
      GroupId: !GetAtt [DBStack, Outputs.SecurityGroupId]
      FromPort: 1433
      ToPort: 1433
      SourceSecurityGroupId: !Ref IWEBAPPSVRSecurityGroup

  CICSListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      Actions:
        - Type: forward
          TargetGroupArn: !Ref CICSTargetGroup
      Conditions:
        - Field: host-header
          Values:
            - !Join ['.', [!Ref Name, !Ref ClientDomainName]]
      ListenerArn: !GetAtt [ELBStack, Outputs.ApplicationListenerArn]
      Priority: 100

  CICSTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 30
      HealthCheckPath: /
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 10
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      Matcher:
        HttpCode: 301,302,400
      Port: 80
      Protocol: HTTP
      VpcId:
        Fn::ImportValue:
          !Sub '${NetworkStackName}-VpcId'
      Targets:
        - Id: !Ref IWEBAPPSVR1Instance
          Port: 80
        - Id: !Ref IWEBAPPSVR2Instance
          Port: 80
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name]]

  SlowTargetResponseTimeCloudWatchAlarm:
    Type: AWS::CloudWatch::Alarm
    Condition: IsProd
    Properties:
      MetricName: TargetResponseTime
      Namespace: AWS/ApplicationELB
      ComparisonOperator: GreaterThanThreshold
      EvaluationPeriods: 1
      Period: 300
      Statistic: Average
      Threshold: 5 #if greater than 5 seconds
      AlarmActions:
        - Fn::ImportValue:
            Fn::Sub: '${SNSStackName}-TopicArn'
      OKActions:
        - Fn::ImportValue:
            Fn::Sub: '${SNSStackName}-TopicArn'
      Dimensions:
        - Name: LoadBalancer
          Value: !GetAtt [ELBStack, Outputs.LoadBalancerFullName]
        - Name: TargetGroup
          Value: !Ref CICSTargetGroup
      TreatMissingData: notBreaching

  TargetGroupHealthyHostCountAlarm:
    Type: AWS::CloudWatch::Alarm
    Condition: IsProd
    Properties:
      MetricName: HealthyHostCount
      Namespace: AWS/ApplicationELB
      ComparisonOperator: LessThanThreshold
      EvaluationPeriods: 1
      Period: 60
      Statistic: Average
      Threshold: 1
      AlarmActions:
        - Fn::ImportValue:
            Fn::Sub: '${SNSStackName}-TopicArn'
      OKActions:
        - Fn::ImportValue:
            Fn::Sub: '${SNSStackName}-TopicArn'
      Dimensions:
        - Name: LoadBalancer
          Value: !GetAtt [ELBStack, Outputs.LoadBalancerFullName]
        - Name: TargetGroup
          Value: !Ref CICSTargetGroup
      TreatMissingData: notBreaching
###
# S3 Buckets
###

  TransferS3Bucket:
    # DeletionPolicy: Retain
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, xfer]]
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256
      LifecycleConfiguration:
        Rules:
          - AbortIncompleteMultipartUpload:
              DaysAfterInitiation: 3
            Status: Enabled
          - Transition:
              StorageClass: GLACIER
              TransitionInDays: 365
            Status: Enabled
#NotificationConfiguration:
#QueueConfigurations:
#XXX_NOTIFICATION_CONFIG
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, xfer]]

  ArchiveS3Bucket:
    # DeletionPolicy: Retain
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, archive]]
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256
      LifecycleConfiguration:
        Rules:
          - AbortIncompleteMultipartUpload:
              DaysAfterInitiation: 3
            Status: Enabled
          - Transition:
              StorageClass: GLACIER
              TransitionInDays: 365
            Status: Enabled
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, archive]]


  BankGroup:
    Type: AWS::IAM::Group
    Properties:
      Policies:
        - PolicyName: BankUsersPolicy
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Sid: QueueAccess
                Effect: Allow
                Action: 
                  - sqs:DeleteMessage
                  - sqs:ReceiveMessage
                Resource:
                  - !Join [':', ['arn:aws:sqs:*', !Ref 'AWS::AccountId', !Join ['-', [!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name, '${aws:username}', queue]]]]
              - Sid: TransferBucketAccess
                Effect: Allow
                Action: 
                  - s3:PutObject
                  - s3:GetObject
                  - s3:ListBucket
                  - s3:DeleteObject
                Resource:
                  - !Join ['', [!GetAtt [TransferS3Bucket, Arn], '/ToServer/${aws:username}/*']]
                  - !Join ['', [!GetAtt [TransferS3Bucket, Arn], '/FromServer/${aws:username}/*']]
                  - !GetAtt [TransferS3Bucket, Arn]
              - Sid: IAMKeyAccess
                Effect: Allow
                Action: 
                  - iam:*AccessKey*
                  - iam:*SigningCertificate*
                Resource:
                  - !Join [':', ['arn:aws:iam:', !Ref 'AWS::AccountId','user/${aws:username}']]

###
# SQS Queues
###

#XXX_INSERT_SQS_XXX



###
# Dashboard
###

  # Dashboard:
  #   Condition: IsProd
  #   Type: AWS::CloudWatch::Dashboard
  #   Properties:
  #     DashboardName: !Join ['-',[!Ref OrgName, !FindInMap [EnvShort, !Ref EnvName, Name], !FindInMap [RegionShort, !Ref 'AWS::Region', Name], !Ref Name]]
  #     DashboardBody: !Sub
  #       - |
  #         {
  #           "widgets": [
  #             {
  #               "height": 12,
  #               "width": 6,
  #               "y": 0,
  #               "x": 0,
  #               "type": "alarm",
  #               "properties": {
  #                 "title": "Alarms",
  #                 "alarms": [
  #                   "${002001_QUEUE_DEPTH_ALARM}",
  #                   "${DB_HIGH_CPU}",
  #                   "${DB_LOW_STORAGE}",
  #                   "${DB_LOW_CPU_CREDIT}",
  #                   "${DB_ERRORS}",
  #                   "${DB_ERROR_DENIED}",
  #                   "${TG_UNHEALTHY}",
  #                   "${TG_SLOW}",
  #                   "${HIGH_CPU_APPSVR1}",
  #                   "${HIGH_CPU_APPSVR2}",
  #                   "${HIGH_CPU_GLBL_SCPSVR1}",
  #                   "${HIGH_CPU_GLBL_SCPSVR2}",
  #                   "${HIGH_CPU_IWEB_SVR1}",
  #                   "${HIGH_CPU_IWEB_SVR2}",
  #                   "${HIGH_CPU_WIT_SVR}",
  #                   "${HIGH_CPU_AD_SVR}",
  #                   "${HIGH_CPU_JUMP_SVR}"
  #                 ]
  #               }
  #             },
  #             {
  #               "height": 6,
  #               "width": 6,
  #               "y": 0,
  #               "x": 6,
  #               "type": "metric",
  #               "properties": {
  #                 "metrics": [
  #                   [ "AWS/RDS", "CPUUtilization", "DBInstanceIdentifier", "${DB_INSTANCE_ID}", { "label": "RDS" } ],
  #                   [ "AWS/EC2", "CPUUtilization", "InstanceId", "${APP_SVR1_ID}", { "label": "App Server 1" } ],
  #                   [ "...", "${APP_SVR2_ID}", { "label": "App Server 2" }  ],
  #                   [ "...", "${GLB_LSCP_SVR1_ID}", { "label": "Backend 1" } ],
  #                   [ "...", "${GLB_LSCP_SVR2_ID}", { "label": "Backend 2" } ],
  #                   [ "...", "${IWEB_APP_SVR1_ID}", { "label": "Web Server 1" } ],
  #                   [ "...", "${IWEB_APP_SVR2_ID}", { "label": "Web Server 2" } ],
  #                   [ "...", "${WIT_SVR_ID}", { "label": "Witness Server" } ],
  #                   [ "...", "${AD_SVR_ID}", { "label": "AD Server" } ],
  #                   [ "...", "${JUMP_SVR_ID}", { "label": "Jump Server" } ]
  #                 ],
  #                 "view": "timeSeries",
  #                 "stacked": false,
  #                 "region": "${REGION}",
  #                 "period": 300,
  #                 "title": "CPU",
  #                 "stat": "Average",
  #                 "yAxis": {
  #                   "left": {
  #                     "label": "Utilization"
  #                   }
  #                 }
  #               }
  #             },
  #             {
  #               "height": 6,
  #               "width": 6,
  #               "y": 6,
  #               "x": 6,
  #               "type": "metric",
  #               "properties": {
  #                 "metrics": [
  #                   [ { "expression": "100-((m4/(16*1024*1000000))*100)", "label": "RDS (memory)", "id": "e1", "region": "${REGION}" } ],
  #                   [ "AWS/RDS", "FreeableMemory", "DBInstanceIdentifier", "${DB_INSTANCE_ID}", { "id": "m4", "visible": false } ],
  #                   [ { "expression": "100-(m1/(20*1024*1000000)*100)", "label": "RDS (disk)", "id": "e2", "region": "${REGION}" } ],
  #                   [ "AWS/RDS", "FreeStorageSpace", "DBInstanceIdentifier", "${DB_INSTANCE_ID}", { "id": "m1", "visible": false } ]
  #                 ],
  #                 "view": "timeSeries",
  #                 "stacked": false,
  #                 "region": "${REGION}",
  #                 "period": 300,
  #                 "title": "Memory / Storage",
  #                 "stat": "Average",
  #                 "yAxis": {
  #                   "left": {
  #                     "label": "Utilization"
  #                   }
  #                 }
  #               }
  #             },
  #             {
  #               "height": 6,
  #               "width": 6,
  #               "y": 0,
  #               "x": 12,
  #               "type": "metric",
  #               "properties": {
  #                 "metrics": [
  #                   [ "AWS/ApplicationELB", "TargetResponseTime", "LoadBalancer", "${ELB_FULL_NAME}", { "label": "ELB" } ],
  #                   [ "AWS/RDS", "ReadLatency", "DBInstanceIdentifier", "${DB_INSTANCE_ID}", { "label": "RDS Read" } ],
  #                   [ ".", "WriteLatency", ".", ".", { "label": "RDS Write" } ]
  #                 ],
  #                 "view": "timeSeries",
  #                 "stacked": false,
  #                 "region": "${REGION}",
  #                 "period": 300,
  #                 "title": "Performance",
  #                 "stat": "Average",
  #                 "yAxis": {
  #                   "left": {
  #                     "showUnits": true,
  #                     "label": "Time"
  #                   }
  #                 }
  #               }
  #             },
  #             {
  #               "height": 6,
  #               "width": 6,
  #               "y": 0,
  #               "x": 18,
  #               "type": "metric",
  #               "properties": {
  #                 "metrics": [
  #                   [ "AWS/ApplicationELB", "ProcessedBytes", "LoadBalancer", "${ELB_FULL_NAME}", { "label": "ELB" } ],
  #                   [ "AWS/RDS", "NetworkReceiveThroughput", "DBInstanceIdentifier", "${DB_INSTANCE_ID}", { "label": "RDS (In)" }],
  #                   [ ".", "NetworkTransmitThroughput", ".", ".", { "label": "RDS (Out)" }],
  #                   [ "AWS/EC2", "NetworkIn", "InstanceId", "${APP_SVR1_ID}", { "label": "App Server 1 (In)" } ],
  #                   [ "...", "${APP_SVR2_ID}", { "label": "App Server 2 (In)" }  ],
  #                   [ "...", "${GLB_LSCP_SVR1_ID}", { "label": "Backend 1 (In)" } ],
  #                   [ "...", "${GLB_LSCP_SVR2_ID}", { "label": "Backend 2 (In)" } ],
  #                   [ "...", "${IWEB_APP_SVR1_ID}", { "label": "Web Server 1 (In)" } ],
  #                   [ "...", "${IWEB_APP_SVR2_ID}", { "label": "Web Server 2 (In)" } ],
  #                   [ "...", "${WIT_SVR_ID}", { "label": "Witness Server (In)" } ],
  #                   [ "...", "${AD_SVR_ID}", { "label": "AD Server (In)" } ],
  #                   [ "...", "${JUMP_SVR_ID}", { "label": "Jump Server (In)" } ],
  #                   [ "AWS/EC2", "NetworkOut", "InstanceId", "${APP_SVR1_ID}", { "label": "App Server 1 (Out)" } ],
  #                   [ "...", "${APP_SVR2_ID}", { "label": "App Server 2 (Out)" }  ],
  #                   [ "...", "${GLB_LSCP_SVR1_ID}", { "label": "Backend 1 (Out)" } ],
  #                   [ "...", "${GLB_LSCP_SVR2_ID}", { "label": "Backend 2 (Out)" } ],
  #                   [ "...", "${IWEB_APP_SVR1_ID}", { "label": "Web Server 1 (Out)" } ],
  #                   [ "...", "${IWEB_APP_SVR2_ID}", { "label": "Web Server 2 (Out)" } ],
  #                   [ "...", "${WIT_SVR_ID}", { "label": "Witness Server (Out)" } ],
  #                   [ "...", "${AD_SVR_ID}", { "label": "AD Server (Out)" } ],
  #                   [ "...", "${JUMP_SVR_ID}", { "label": "Jump Server (Out)" } ]
  #                 ],
  #                 "view": "timeSeries",
  #                 "stacked": false,
  #                 "title": "Network",
  #                 "region": "${REGION}",
  #                 "period": 300,
  #                 "stat": "Average",
  #                 "legend": {
  #                   "position": "bottom"
  #                 },
  #                 "yAxis": {
  #                   "left": {
  #                     "label": "Volume"
  #                   }
  #                 }
  #               }
  #             },
  #             {
  #               "height": 6,
  #               "width": 6,
  #               "y": 6,
  #               "x": 12,
  #               "type": "metric",
  #               "properties": {
  #                 "metrics": [
  #                   [ "AWS/RDS", "ReadThroughput", "DBInstanceIdentifier", "${DB_INSTANCE_ID}", { "label": "RDS Read" }],
  #                   [ ".", "WriteThroughput", ".", ".", { "label": "RDS Write" }],
  #                   [ "AWS/EC2", "EBSReadOps", "InstanceId", "${APP_SVR1_ID}", { "label": "App Server 1 (In)" } ],
  #                   [ "...", "${APP_SVR2_ID}", { "label": "App Server 2 (In)" }  ],
  #                   [ "...", "${GLB_LSCP_SVR1_ID}", { "label": "Backend 1 (In)" } ],
  #                   [ "...", "${GLB_LSCP_SVR2_ID}", { "label": "Backend 2 (In)" } ],
  #                   [ "...", "${IWEB_APP_SVR1_ID}", { "label": "Web Server 1 (In)" } ],
  #                   [ "...", "${IWEB_APP_SVR2_ID}", { "label": "Web Server 2 (In)" } ],
  #                   [ "...", "${WIT_SVR_ID}", { "label": "Witness Server (In)" } ],
  #                   [ "...", "${AD_SVR_ID}", { "label": "AD Server (In)" } ],
  #                   [ "...", "${JUMP_SVR_ID}", { "label": "Jump Server (In)" } ],
  #                   [ "AWS/EC2", "EBSWriteOps", "InstanceId", "${APP_SVR1_ID}", { "label": "App Server 1 (Out)" } ],
  #                   [ "...", "${APP_SVR2_ID}", { "label": "App Server 2 (Out)" }  ],
  #                   [ "...", "${GLB_LSCP_SVR1_ID}", { "label": "Backend 1 (Out)" } ],
  #                   [ "...", "${GLB_LSCP_SVR2_ID}", { "label": "Backend 2 (Out)" } ],
  #                   [ "...", "${IWEB_APP_SVR1_ID}", { "label": "Web Server 1 (Out)" } ],
  #                   [ "...", "${IWEB_APP_SVR2_ID}", { "label": "Web Server 2 (Out)" } ],
  #                   [ "...", "${WIT_SVR_ID}", { "label": "Witness Server (Out)" } ],
  #                   [ "...", "${AD_SVR_ID}", { "label": "AD Server (Out)" } ],
  #                   [ "...", "${JUMP_SVR_ID}", { "label": "Jump Server (Out)" } ]
  #                 ],
  #                 "view": "timeSeries",
  #                 "stacked": false,
  #                 "region": "${REGION}",
  #                 "period": 300,
  #                 "title": "I/O",
  #                 "stat": "Average",
  #                 "yAxis": {
  #                   "left": {
  #                     "label": "Count",
  #                     "showUnits": false
  #                   }
  #                 }
  #               }
  #             },
  #             {
  #               "height": 6,
  #               "width": 6,
  #               "y": 6,
  #               "x": 18,
  #               "type": "metric",
  #               "properties": {
  #                 "metrics": [
  #                   [ "AWS/ApplicationELB", "HTTPCode_ELB_5XX_Count", "LoadBalancer", "${ELB_FULL_NAME}", { "label": "ELB HTTP 5XX_Count" } ],
  #                   [ ".", "HTTPCode_ELB_4XX_Count", ".", ".", { "label": "ELB HTTP 4XX_Count" } ]
  #                 ],
  #                 "view": "timeSeries",
  #                 "stacked": false,
  #                 "region": "${REGION}",
  #                 "title": "Error Count",
  #                 "period": 300,
  #                 "stat": "Average"
  #               }
  #             }
  #           ]
  #         }
  #       - 002001_QUEUE_DEPTH_ALARM: !GetAtt [002001QueueDepthAlarm, Arn]
  #         HIGH_CPU_APPSVR1: !GetAtt [HighCPUCICSAPPSVR1Alarm, Arn]
  #         HIGH_CPU_APPSVR2: !GetAtt [HighCPUCICSAPPSVR2Alarm, Arn]
  #         HIGH_CPU_GLBL_SCPSVR1: !GetAtt [HighCPUGLBLSCPSVR1Alarm, Arn]
  #         HIGH_CPU_GLBL_SCPSVR2: !GetAtt [HighCPUGLBLSCPSVR2Alarm, Arn]
  #         HIGH_CPU_IWEB_SVR1: !GetAtt [HighCPUIWEBAPPSVR1Alarm, Arn]
  #         HIGH_CPU_IWEB_SVR2: !GetAtt [HighCPUIWEBAPPSVR2Alarm, Arn]
  #         HIGH_CPU_WIT_SVR: !GetAtt [HighCPUCICSWITSVRAlarm, Arn]
  #         HIGH_CPU_AD_SVR: !GetAtt [HighCPUADSVRAlarm, Arn]
  #         HIGH_CPU_JUMP_SVR: !GetAtt [HighCPUJUMPSVRAlarm, Arn]
  #         DB_HIGH_CPU: !GetAtt [DBStack, Outputs.DBHighCPUAlarm]
  #         DB_LOW_STORAGE: !GetAtt [DBStack, Outputs.DBLowStorageAlarm]
  #         DB_LOW_CPU_CREDIT: !GetAtt [DBStack, Outputs.CPUCreditBalanceAlarm]
  #         DB_ERRORS: !GetAtt [DBStack, Outputs.DBErrorsAlarm]
  #         DB_ERROR_DENIED: !GetAtt [DBStack, Outputs.DBErrorDeniedAlarm]
  #         TG_SLOW: !GetAtt [SlowTargetResponseTimeCloudWatchAlarm, Arn]
  #         TG_UNHEALTHY: !GetAtt [TargetGroupHealthyHostCountAlarm, Arn]
  #         DB_INSTANCE_ID: !GetAtt [DBStack, Outputs.DBInstanceName]
  #         REGION: !Ref 'AWS::Region'
  #         ELB_FULL_NAME: !GetAtt [ELBStack, Outputs.LoadBalancerFullName]
  #         APP_SVR1_ID: !Ref CICSAPPSVR1Instance
  #         APP_SVR2_ID: !Ref CICSAPPSVR2Instance
  #         GLB_LSCP_SVR1_ID: !Ref GLBLSCPSVR1Instance
  #         GLB_LSCP_SVR2_ID: !Ref GLBLSCPSVR2Instance
  #         IWEB_APP_SVR1_ID: !Ref IWEBAPPSVR1Instance
  #         IWEB_APP_SVR2_ID: !Ref IWEBAPPSVR2Instance
  #         WIT_SVR_ID: !Ref CICSWITSVRInstance
  #         AD_SVR_ID: !Ref PCHCADSVRInstance
  #         JUMP_SVR_ID: !Ref PCHJUMPSVRInstance

Outputs:

  AllUserKeysAndSecrets:
    Description: Combined
    Value: !Join
      - ''
      - - !Join ['', ['||', Username, ',']]
        - !Join ['', ['AccessKey', ',']]
        - SecretKey
#XXX_INSERT_OUTPUT
